# agency-os

./: .env.bak  .env.example  .gitignore  CONTRIBUTING.md  EXECUTE_TEST.txt  LICENSE  MANIFEST.yaml  PRUEBA_AGENCY.txt  README.md  RELEASE_PLAN.md  STRUCTURE.md  mypy_results.txt  pyproject.toml  requirements.txt  test_minimal.py  test_required.py  test_tool_call.py
.github/: pull_request_template.md
configs/: MODEL_ROUTING.md  env.example  models.yaml  routing.yaml  schedule.yaml
data/: agency.db-shm  agency.db-wal
docs/: BRAINSTORM-v35-nextgen.md  BRAINSTORM-v40-multiagent.md  CLIENT_GUIDE.md  OPENCLAW_INTEGRATION.md  PLAN-v35-nextgen.md
install/: agency-os@.service  bootstrap_env.md  install_linux.sh  install_mac.sh  link_global_cli.sh  setup.sh
jobs/: ENABLE_CRONS.md  JOBS.md  TASKS_24_7.md  __init__.py  agency_build_cycle.sh  agency_execution_cycle.sh  agency_master_cycle.sh  agency_report_4h.sh
kernel/: __init__.py  action_executor.py  agent_manager.py  api_server.py  audit_trail.py  autonomy_engine.py  autonomy_policy.md  blockers.md  channel_connector.py  cli.py  config.py  context_registry.md  crew_engine.py  cross_studio.py  current_focus.md  current_task.md  dashboard.py  deployment_engine.py  event_bus.py  exceptions.py  feature_flags.py  guardrails.py  health_check.py  heartbeat.py  initiative_engine.py  input_validator.py  job_queue.py  mcp_server.py  memory_manager.py  mission_engine.py  mission_learner.py  mission_planner.py  mission_queue.md  model_router.py  next_actions.md  notifier.py  openclaw_bridge.py  orchestrator.py  output_formatter.py  (+18 more)
(+154 files in other folders)
